--- a/src/app/admin/dashboard/views/main.html
+++ b/src/app/admin/dashboard/views/main.html
@@ -47,7 +47,16 @@
                         <a href="" dropdown-toggle>Pekerjaan<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a ui-sref="main.admin.work">Tugas Rutin</a></li>
-                            <li><a ui-sref="main.admin.project">Project</a></li>
+                            
+                                <li class="dropdown-submenu">
+                                    <a>Project</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="" ui-sref="main.admin.project.template">Template</a></li>
+                                        <li><a href="" ui-sref="main.admin.project">Instance</a></li>
+                                    </ul>
+                                </li>
+                                
+                            
                             <li role="separator" class="divider"></li>
                             <li><a ui-sref="main.admin.groupJob">Group Job</a></li>
                             <li><a ui-sref="main.admin.semester">Semester</a></li>
