--- a/src/app/user/task/views/list.html
+++ b/src/app/user/task/views/list.html
@@ -4,7 +4,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Task</h1>
+            <h1 class="page-header">Pekerjaan</h1>
         </div>
     </div>
 
